@@ -5,6 +5,8 @@ octsympy 2.3.0-dev
 
           besselj
           bessely
+          besseli
+          besselk
           cbrt
           chebyshevU
           chebyshevT
